fixed code whitespace re convention

--- a/static/sagastyle.css
+++ b/static/sagastyle.css
@@ -463,7 +463,7 @@ font-size: 0.9em;
 
 	.blogpost {
 		position: relative;
-		top:20px;
+		top:40px;
 		margin-bottom:20px;
 		}
 
@@ -563,6 +563,7 @@ font-size: 0.9em;
 width: 100%;
 height: 100px;
 border-radius: 5px;
+background-color: transparent; 
 }
 .newcomment {
 	color: white;
@@ -580,3 +581,6 @@ border-radius: 5px;
 	display:inline;
 }
 
+.whoops {
+	text-align:center;
+}
